[gd_scene load_steps=17 format=3 uid="uid://cuhhvtpvqv8yo"]

[ext_resource type="Script" uid="uid://dpnto6dvajg48" path="res://scripts/enemy.gd" id="1_5uy6h"]
[ext_resource type="Texture2D" uid="uid://bduwm0pobhefb" path="res://assets/sprites/dungeon.png" id="1_md0e3"]
[ext_resource type="PackedScene" uid="uid://kf8tqdlm8c5t" path="res://addons/vision_cone_2d/vision_cone_2d_template.tscn" id="3_4ra3w"]
[ext_resource type="AudioStream" uid="uid://djqcr2hahuvmm" path="res://assets/sfx/move-a.ogg" id="3_5uy6h"]
[ext_resource type="AudioStream" uid="uid://b7l8vmpjgwp5f" path="res://assets/sfx/hurt.ogg" id="4_c4w8v"]
[ext_resource type="AudioStream" uid="uid://byqd07vdeub20" path="res://assets/sfx/swing.mp3" id="5_xwavj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5uy6h"]
size = Vector2(12, 10)

[sub_resource type="Animation" id="Animation_c4w8v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.7853982]
}

[sub_resource type="Animation" id="Animation_5uy6h"]
resource_name = "draw"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-15, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.7853982, -1.5707964]
}

[sub_resource type="Animation" id="Animation_xwavj"]
resource_name = "draw"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-15, 0), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-1.5707964, -0.7853982]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xwavj"]
_data = {
&"RESET": SubResource("Animation_c4w8v"),
&"draw": SubResource("Animation_5uy6h"),
&"sheathe": SubResource("Animation_xwavj")
}

[sub_resource type="Animation" id="Animation_qhqgy"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SFX/Walk:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SFX/Walk:pitch_scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [1.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SFX/Walk:stream")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [null]
}

[sub_resource type="Animation" id="Animation_g2els"]
resource_name = "walk"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.17453292, 0.0, -0.17453292519943295, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1, 1.2), Vector2(1, 1), Vector2(1, 1.2), Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(1.345, -1), Vector2(0, 0), Vector2(-1.345, -1), Vector2(0, 0)]
}
tracks/3/type = "audio"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SFX/Walk")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"clips": [],
"times": PackedFloat32Array()
}
tracks/3/use_blend = true
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SFX/Walk:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.1, 0.25, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("SFX/Walk:pitch_scale")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0.1, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.9, 1.1]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("SFX/Walk:stream")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_5uy6h")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dqkch"]
_data = {
&"RESET": SubResource("Animation_qhqgy"),
&"walk": SubResource("Animation_g2els")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_5uy6h"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_c4w8v"]
radius = 14.0

[node name="Enemy" type="CharacterBody2D" node_paths=PackedStringArray("vision_renderer")]
collision_layer = 8
collision_mask = 13
motion_mode = 1
script = ExtResource("1_5uy6h")
vision_renderer = NodePath("VisionCone/VisionCone2D/VisionConeRenderer")
alert_color = Color(1, 0, 0, 0.19607843)

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_md0e3")
hframes = 12
vframes = 11
frame = 109

[node name="Weapon" type="Node2D" parent="Sprite2D"]

[node name="Sprite2D" type="Sprite2D" parent="Sprite2D/Weapon"]
z_index = -1
rotation = -0.7853982
texture = ExtResource("1_md0e3")
hframes = 12
vframes = 11
frame = 118

[node name="AttackHitArea" type="Area2D" parent="Sprite2D/Weapon/Sprite2D"]
position = Vector2(8.742278e-08, -2)
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite2D/Weapon/Sprite2D/AttackHitArea"]
position = Vector2(2.1855783e-08, 0)
shape = SubResource("RectangleShape2D_5uy6h")
debug_color = Color(0.95514816, 0.17613098, 0.3152488, 0.41960785)

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite2D/Weapon/Sprite2D"]
libraries = {
&"": SubResource("AnimationLibrary_xwavj")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dqkch")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_5uy6h")

[node name="SFX" type="Node2D" parent="."]

[node name="Walk" type="AudioStreamPlayer" parent="SFX"]
volume_db = -15.0
bus = &"SFX Slowable"

[node name="Hit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_c4w8v")
bus = &"SFX"

[node name="Swing" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_xwavj")
volume_db = -5.0
bus = &"SFX"

[node name="VisionCone" type="Node2D" parent="."]
z_index = -2

[node name="VisionCone2D" parent="VisionCone" instance=ExtResource("3_4ra3w")]
rotation = -1.5708
angle_deg = 45
ray_count = 50
max_distance = 100.0
collision_layer_mask = 5

[node name="VisionConeRenderer" parent="VisionCone/VisionCone2D" index="0"]
color = Color(0.43137255, 0.92941177, 0.2784314, 0.19607843)

[node name="VisionConeArea" parent="VisionCone/VisionCone2D" index="1"]
collision_mask = 4

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_c4w8v")
debug_color = Color(0.6666667, 0.4509804, 0.63529414, 0.20784314)

[connection signal="body_entered" from="Sprite2D/Weapon/Sprite2D/AttackHitArea" to="." method="_on_attack_hit_area_body_entered"]
[connection signal="body_entered" from="VisionCone/VisionCone2D/VisionConeArea" to="." method="_on_vision_cone_area_body_entered"]
[connection signal="body_exited" from="VisionCone/VisionCone2D/VisionConeArea" to="." method="_on_vision_cone_area_body_exited"]
[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]

[editable path="VisionCone/VisionCone2D"]
